# IR2136

./: battery_gps_node.py  main.py
prac3_ws/: mav.parm  mav.tlog  mav.tlog.raw
prac3_ws/install/: local_setup.sh  setup.sh
prac3_ws/install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
prac3_ws/install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
prac3_ws/install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  pong_node.hpp
prac3_ws/install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
prac3_ws/install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
prac3_ws/install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
prac3_ws/install/examples_rclcpp_minimal_action_client/share/examples_rclcpp_minimal_action_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
prac3_ws/install/my_drone_package/lib/my_drone_package/: battery_gps_node  (+1 more)
prac3_ws/log/: latest_build
prac3_ws/src/my_drone_package/: package.xml  setup.py
prac3_ws/src/my_drone_package/my_drone_package/: battery_gps_node.py  mission_control_node.py
(+191 files in other folders)
