<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>my_drone_package</name>
  <version>0.1.0</version>
  <description>Paquete para controlar el dron en ROS 2</description>
  <maintainer email="al416445@uji.es">Jordi Altarejos</maintainer>
  <license>MIT</license>

  <!-- Dependencias necesarias para los nodos -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pymavlink</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

